# mini-ci

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
.mini-ci/: build.sh
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  LogStore.ts  VirtualLog.tsx  api.ts  index.css
frontend/src/pages/: ProjectDetail.tsx  ProjectList.tsx
src/: db.rs  embed.rs  git_ops.rs  main.rs  models.rs  package_zip.rs  runner.rs
