[package]
name = "mini-ci"
version = "0.1.1"
edition = "2021"
description = "Single-binary mini CI server with web UI"
build = "build.rs"

[dependencies]
anyhow = "1"
async-stream = "0.3"
clap = { version = "4", features = ["derive"] }
axum = { version = "0.8", features = ["macros"] }
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
mime_guess = "2"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
regex = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
walkdir = "2"
zip = "2"
rust-embed = "8"

[profile.release]
lto = true
codegen-units = 1
